--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -95,7 +95,7 @@ The subject of merging stellar-mass \ilya{black-hole} binaries as gravitational-
 
 %\textcolor{red}{Can we go bigger picture here and say (briefly) why binary star evolution is interesting and/or important? A very quick summary of the Prospects section?}
 
-In this colloquium\ilya{-style article}, we focus on the questions that strike us as being most interesting and timely at this stage of the field's development.  These will indeed mostly be questions rather than answers, and the list is undoubtedly biased by our own interests. Further, we do not attempt to systematically survey all of the relevant literature.  In other words, this is emphatically {\it not} a review. %\textcolor{red}{Can we summarize the questions in one or two sentences? Understanding the evolution of massive stellar binaries? Something else?}
+In this colloquium\ilya{-style article}, we focus on the questions that strike us as being most interesting and timely at this stage of the field's development.  These will indeed mostly be questions rather than answers, and the list is undoubtedly biased by our own interests. Further, we do not attempt to systematically survey all of the relevant literature.  In other words, this is emphatically {\it not} a review. \ajf{Magritte!!!} %\textcolor{red}{Can we summarize the questions in one or two sentences? Understanding the evolution of massive stellar binaries? Something else?}
 
 
 Below, we summarise the existing observations of merging binary black holes and closely related systems in section \ref{obs}, describe the plausible formation scenarios for binary black holes in \autoref{form}, discuss the predicted merger rates and merging object properties in \autoref{merge}, and speculate about the prospects for gravitational-wave astronomy in \autoref{prospect}.
@@ -277,19 +277,21 @@ Here, rather than delving into the details of binary evolution, we will outline 
 \subsection{Merger rates}
 
 \subsubsection{Isolated binary evolution channel}
-\ajf{And do the same thing, at least briefly, for the other 2 channels.}
+\ajf{Need to do the same thing, at least briefly, for the other 2 channels.}
 
 In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:COMPAS}, a binary must (i) have the right masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that a stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.
 
-(i) The minimal initial stellar mass for forming a black hole is likely around 20 solar masses, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, for the purpose of this back-of-the-envelope calculation, we will use this approximation. Meanwhile, assuming that the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012}, typically half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
+\begin{enumerate}
+	\item[(i)] The minimal initial stellar mass for forming a black hole is likely around 20 solar masses, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, for the purpose of this back-of-the-envelope calculation, we will use this approximation. Meanwhile, assuming that the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012}, typically half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
 
-(ii) Initial binary  separations are observed to be distributed uniformly in the logarithm, $p(a) \propto 1/a$ \citep{Opik:1924}.  The first episode of mass transfer from the donor should typically be case B mass transfer (i.e., the donor should evolve beyond core hydrogen burning, but not yet beyond core helium burning); stars expand by several orders of magnitude during this phase, which means that the range of initial separations occupies a significant logarithmic fraction of the total initial range of separations, so $f_\textrm{init sep} \approx 0.5$.  
+\item[(ii)] Initial binary  separations are observed to be distributed uniformly in the logarithm, $p(a) \propto 1/a$ \citep{Opik:1924}.  The first episode of mass transfer from the donor should typically be case B mass transfer (i.e., the donor should evolve beyond core hydrogen burning, but not yet beyond core helium burning); stars expand by several orders of magnitude during this phase, which means that the range of initial separations occupies a significant logarithmic fraction of the total initial range of separations, so $f_\textrm{init sep} \approx 0.5$.  
 
-(iii) We assume that black holes receive low natal kicks and do not lose significant amounts of mass, so that supernovae do not significantly affect binary parameters, i.e. $f_\textrm{survive SN1} \approx f_\textrm{survive SN2} \approx 1$.  
+\item[(iii)]  We assume that black holes receive low natal kicks and do not lose significant amounts of mass, so that supernovae do not significantly affect binary parameters, i.e. $f_\textrm{survive SN1} \approx f_\textrm{survive SN2} \approx 1$.  
 
-(iv) The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, it is easier \ajf{is there a better word to use than easier here?} to initiate a common envelope if the mass ratio of the donor to the accretor is greater, and when the donor begins mass transfer earlier in its post-main-sequence evolution.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase; even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which is probably close to the threshold for initiating a common envelope phase.  At the same time, while an early onset of mass transfer means that the less evolved donor does not shrink as much in response to mass transfer (making mass transfer stable), it cannot have an envelope that is too tightly bound, otherwise the orbital energy is insufficient to eject it.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
+\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, it is easier \ajf{is there a better word to use than easier here?} to initiate a common envelope if the mass ratio of the donor to the accretor is greater, and when the donor begins mass transfer earlier in its post-main-sequence evolution.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase; even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which is probably close to the threshold for initiating a common envelope phase.  At the same time, while an early onset of mass transfer means that the less evolved donor does not shrink as much in response to mass transfer (making mass transfer stable), it cannot have an envelope that is too tightly bound, otherwise the orbital energy is insufficient to eject it.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
 
-(v) Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$.
+\item[(v)]  Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$.
+\end{enumerate}
 
 Thus, our Drake equation is as follows:
 \begin{eqnarray}
@@ -302,46 +304,54 @@ The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ 
 
 \subsection{System Properties}
 \subsubsection{Masses}
-The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses, matching all observations to date \citep[e.g.,][]{Stevenson:2017} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because the more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}.  Dynamical formation in globular clusters can also lead to a range of masses; it may have a stronger preference for more massive binaries as lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}, but the mass distribution would be sensitive to natal kicks which may eject black holes at formation \citep{Zevin:2017}.  \ilya{\citet{Chatterjee:2017} argue that dynamical formation could also explain all black hole binary merger observations to date, with old, metal-poor clusters preferentially contributing more massive black hole binaries and younger, metal-rich clusters contributing lighter binaries.}  Chemically homogeneous evolution is only possible in more massive binaries, with total mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
+Once formed by stellar collapse or supernova, the black holes in the binaries of interest will have roughly constant masses. The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit, which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion, would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each black hole is thus almost equal to its mass at formation. 
+
+The classical isolated binary evolution channel discussed in detail above can produce binary black holes with a broad range of masses, matching all observations to date \citep[e.g.,][]{Stevenson:2017} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments and make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in \autoref{environ} below. 
+
+ Dynamical formation in globular clusters can also lead to a range of masses, but may favor more massive binaries: lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}. The mass distribution is sensitive to natal kicks, which may eject black holes at formation \citep{Zevin:2017}.  \citet{Chatterjee:2017} argue that dynamical formation could explain all black hole binary merger observations to date, with old, metal-poor clusters preferentially contributing more massive black hole binaries and younger, metal-rich clusters contributing lighter binaries.
+ 
+  Chemically homogeneous evolution is only possible in \ajf{can only produce?} more massive binaries, with total \ajf{black hole?} mass above $\sim 50 M_\odot$ \citep{MandeldeMink:2016,Marchant:2016}.
 
 \subsubsection{Mass Ratios}
-The masses of merging black hole binaries produced through the classical isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and dynamically unstable reverse mass transfer, though mass ratios exceeding $2:1$ are more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.  Dynamically formed binaries may also prefer comparable mass ratios because the heaviest black holes are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or an intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}.  On the other hand, chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that went through a contact phase \citep{Marchant:2016}.  
+The mass ratios of merging black hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer. However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.
 
-\subsubsection{Spins}
-The spins of merging black holes may also carry imprints of their evolutionary history.  Isolated binaries are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Rodriguez:2016spin}.  
+Dynamically formed binaries may also favor comparable masses because the heaviest black holes are most likely to merge \ajf{say more here?}, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or an intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
 
-The spin magnitudes may also depend sensitively on the evolutionary history.  Although a massive star may contain a lot of angular momentum, far in excess of the maximum value allowed for a spinning black hole, the vast majority of that angular momentum will be contained in the outer layers of the star, and can therefore be readily lost through winds or through envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}, but these may suffer from measurement systematics \citep[e.g.,][]{Kawano:2017}.  
+Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}, with perhaps nearly equal mass black holes resulting from the evolution of systems that went through a contact phase \ajf{what does "contact phase" mean for this channel?} \citep{Marchant:2016}.  
 
-Gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum (so-called `effective spin'), which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
+\subsubsection{Black Hole Spin Magnitudes and Directions}
+The spins of merging black holes may carry imprints of their evolutionary history. 
 
-\subsubsection{Environments}
-The evolutionary history of merging black holes is also tied to their formation environments and delay times before merger.  
-The yield of merging black holes per unit star forming mass is greatest at lowest metallicity, due largely to reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}; for the classical channel, delayed stellar expansion, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.  Most of the low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}.  On the other hand, the delay time between star formation and merger in the classical formation channel peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay.  A convolution of the metallicity-specific star formation history and the delay time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the star formation history of GW150914, which either formed in the first $\sim$ Gyr after the Big Bang with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region, such as a low-mass satellite galaxy.  
+ Isolated binaries (\ajf{and those formed by chemically homogeneous evolution?}) are generally expected to have preferentially aligned spins after undergoing episodes of mass transfer and/or tidal coupling, although natal kicks and possible spin tilts during supernovae could lead to misalignment \citep[e.g.,][]{Farr:2011}.  Meanwhile, the spin directions are likely to be isotropically distributed for dynamically formed binaries \citep[e.g.,][]{Rodriguez:2016spin}.
 
-\subsubsection{Eccentricities}
-Finally, the eccentricity of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}.  While isolated binaries are expected to merge on circular orbits as gravitational waves are very efficient at damping out eccentricity, dynamically formed systems may sometimes retain significant eccentricities if they are already very close at formation.  This may be possible either through two-body captures in Galactic nuclei \citep{OLeary:2008} \citet[but see][]{Tsang:2013}, or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}.
+Spin magnitudes may also depend sensitively on evolutionary history.  Although a massive star may contain a lot of angular momentum, far in excess of the maximum value allowed for a spinning black hole, the vast majority of that angular momentum will be contained in the outer layers of the star, and can therefore be readily lost through winds or through envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017}.   This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}, but these \ajf{the observations, I assume?} may suffer from measurement systematics \citep[e.g.,][]{Kawano:2017}.  
 
-\subsubsection{Understanding the masses of the merging black holes}
-\ajf{not sure yet where this belongs...}
+Gravitational-wave spin measurements have so far only constrained the average spin component in the direction of the orbital angular momentum: the so-called `effective spin', which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  The low effective spins of the first four detected merging black holes allowed \citet{Farr:2017} to conclude that either the spin directions were isotropically distributed or the spin magnitudes were low.
 
-\textcolor{red}{Needs intro summary sentence. Placeholder: The apparent discrepancy between BH masses in GW mergers and those in observed X-ray binaries can be understood in terms of the chemical composition of the stars that formed them.}
+\subsubsection{Orbital Eccentricities}
+	The orbital eccentricities of merging black hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, both isolated binaries and those formed via the chemically homogeneous evolution channel are expected to merge on circular orbits. Dynamically formed systems may, however, retain significant eccentricities at merger if their orbits are very tight at formation. Dynamical formation of tight binaries may be possible either through two-body captures in Galactic nuclei \citep{OLeary:2008} \citep[but see][]{Tsang:2013}, or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}. 
 
-\textbf{Compact object masses over time:} Once formed by stellar collapse or supernova, the compact objects in the binaries of interest will have roughly constant masses. The first compact object to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit, which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion, would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each compact remnant is thus almost equal to its mass at formation. 
 
-\textbf{Compact object masses at formation:} Compact object masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the physics of the collapse itself. \textcolor{red}{--what does it mean to say that the mass is set by the physics?} Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the compact object remnant.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO and Virgo observed such heavy black holes, but why we haven't observed such heavy \textcolor{red}{(are we generally ok with saying "heavy" throughout as equivalent to "massive"? I probably wouldn't, but if it's standard then ok.)} black holes in X-ray binaries. The answer has to do with the mass loss from massive stars. 
+\subsubsection{Formation Environments}
+\label{environ}
+The evolutionary history of merging black holes is also dependent on their formation environments, particularly through the effect of chemical composition (metallicity) on stellar evolution and thereby black hole mass.
 
-\textbf{The importance of stellar winds:} The intense radiation from massive stars -- whose luminosities may be a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than 1/3 of the initial stellar mass. \textcolor{red}{(adding a sentence or two here to spell out your point!)}   Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity -- the fraction of the star's mass that's in elements heavier than hydrogen and helium -- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
+Black hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the physics of the collapse itself. \textcolor{red}{--what does it mean to say that the mass is set by the physics?} Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black hole remnant.
 
-\textbf{Why gravitational-wave sources might come from low-metallicity stars:} Because metals are produced by stars, low-metallicity regions are typically those with fewer preceding stellar generations.  Several plausible scenarios could explain why the gravitational-wave sources came from low-metallicity stars. For the more distant sources, explanations include formation in low-mass metal-poor galaxies, while for relatively local mergers the parent stars could have formed in the very distant past, with a long delay time between star formation and black hole merger \citep{Belczynski:2016}. \textcolor{red}{This issue is discussed in more detail in Section ??? -- which I haven't read in detail yet, so I might have distorted the meaning of this paragraph... sorry!.}
-
+The intense radiation from massive stars -- whose luminosities may be a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than 1/3 of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity -- the fraction of the star's mass that's in elements heavier than hydrogen and helium -- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
+ 
 \begin{figure}
 	\centering
 	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
 	\includegraphics[width=0.7\textwidth]{BHremnantdelayed.png}
-	\caption{\label{fig:BHremnant} Remnant compact object mass for a given zero-age main sequence stellar mass in the absence of an interacting binary companion, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' supernova fallback prescription \citep{Fryer:2012}, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).}
+	\caption{\label{fig:BHremnant} Remnant compact object mass for a given zero-age main sequence stellar mass in the absence of an interacting binary companion, following the default COMPAS prescription for winds \citep{Stevenson:2017}  and the `delayed' supernova fallback prescription \citep{Fryer:2012}, at solar ($Z_\odot=0.02$) metallicity (blue) and a tenth solar (red).\ajf{distinguish between NSs and BHs?}} 
 \end{figure}
-%\todo{Include mass plots from Ben, or reuse Chris's old plot?, or attached?}
 
+Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. The yield of merging black holes per unit star-forming mass is also greatest at lowest metallicity, due largely to the reduced wind-driven mass loss \citep[e.g.,][]{Belczynski:2010}. For the isolated binary channel, delayed stellar expansion \ajf{at lower metallicity?}, which allows the stars to develop a larger helium core before engaging in mass transfer, further enhances this effect \citep[e.g.,][]{Stevenson:2017}.
+
+The above considerations place constraints on the formation time of the systems that produced the observed merging black hole binaries. Most low-metallicity star formation occurs in the early Universe, before gas is polluted with metal-rich products of stellar evolution, although there is a broad range of metallicities at all times \citep[e.g.,][]{LangerNorman:2006,TaylorKobayashi:2015}. However, the delay time between star formation and merger in the classical formation channel peaks at shorter delay times with a $p(\tau) \propto 1/\tau$ decay. \ajf{need to say why -- does this just come out of population synthesis? Is it an approx power law?} A convolution of the metallicity-specific star formation history and the delay-time distribution led \citet{Belczynski:2016} to conclude that, a posteriori, there was a bimodal probability distribution on the formation time of the binary star progenitor of GW150914: it either formed in the first $\sim$ Gyr after the Big Bang, with a long subsequent delay to merger \citep{Dominik:2014}, or formed more recently in a low-metallicity region such as a low-mass satellite galaxy.  
+
+  
 
 
 \section{Prospects for gravitational-wave astronomy}\label{prospect}
